# crisprscreens

./: pyproject.toml  quickstart_control_qc.py
examples/: control_qc_example.py  example_new_reports.py  export_control_data_example.py  integration_guide_for_run.py  method_comparison_example.py
src/crisprscreens/: __init__.py  main.py
src/crisprscreens/.github/workflows/: ci.yml
src/crisprscreens/api/: __init__.py
src/crisprscreens/core/: __init__.py  interactive.py  mageck.py  mageck_report.py  mageck_spikein.py  method_comparison.py  pairing_qc.py  plots.py  qc.py  qc_plots.py  report.py
src/crisprscreens/jobs/: __init__.py  mageck_jobs.py  method_comparison_jobs.py  plot_jobs.py  qc_jobs.py
src/crisprscreens/models/: __init__.py  qc_report.py  result_report.py
src/crisprscreens/r/: mageck.R
src/crisprscreens/r_integration/: mageck_wrapper.py
src/crisprscreens/services/: __init__.py  io.py  mageck_io.py  plots_io.py  spike_evaluation.py
src/crisprscreens/templates/: report.md
src/crisprscreens/utils/: __init__.py
src/delete/jobs/: mageck_jobs.py
tests/: _run_selected.py  run_spike_ad_hoc.py  test_control_qc.py  test_io.py  test_mageck.py  test_mageck_io.py  test_mageck_pathway_plot.py  test_mageck_report.py  test_method_comparison.py  test_plots.py  test_plots_io.py  test_qc.py  test_report_and_qc.py  test_spike_evaluation.py
