[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "crisprscreens"
version = "0.2.0"
description = "This is a set of helper tools (e.g. Mageck helper) to analyse CRISPR screens"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
  { name = "Marco Mernberger", email = "marco.mernberger@gmail.com" }
]
dependencies = [
  "pydantic-settings>=2.5.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "typer[all]>=0.12.0,<0.13.0",
  "pandas>=2.2.2,<3.0.0",
  "numpy>=1.26.0,<3.0.0",
  "matplotlib>=3.8.0,<4.0.0",
  "seaborn>=0.13.0,<0.14.0",
  "scipy>=1.11.0,<2.0.0",
  "scikit-learn>=1.5.0,<2.0.0",
  "reportlab>=4.0.0,<5.0.0",
  "markdown>=3.5.0,<4.0.0",
]

# uv: Development-Dependencies (nicht als veröffentlichte "Extras")
[dependency-groups]
dev = [
  "black>=24.4.0,<25.0.0",
  "ruff>=0.6.0,<0.7.0",
  "mypy>=1.10.0,<2.0.0",
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pre-commit>=3.8.0,<4.0.0",
  "sphinx>=7.0.0,<8.0.0",
  "myst-parser>=3.0.0,<4.0.0",
  "furo>=2024.0.0,<2025.0.0",
  "ipykernel>=6.29.0,<7.0.0",
  "pandas>=2.2.2,<3.0.0",
]

# hatchling: src-layout packaging
[tool.hatch.build.targets.wheel]
packages = ["src/crispr_screens"]

# --- Black ---
[tool.black]
line-length = 80
target-version = ["py312"]
include = "\\.pyi?$"

# --- Ruff ---
[tool.ruff]
line-length = 80
target-version = "py312"
src = ["src", "tests"]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # Black regelt line-length
exclude = [".venv", "build", "dist", ".git", ".mypy_cache", ".ruff_cache"]

[tool.ruff.isort]
known-first-party = ["crisprscreens"]

# --- pytest ---
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

# --- mypy ---
[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
plugins = []
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

# --- coverage ---
[tool.coverage.run]
source = ["crisprscreens"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true


